# web_home_work_8

./: config.ini  connect.py  main.py  models.py  pyproject.toml  seeds.py
hw8_2/: config.ini  models.py
